        Reviewed by mjs.

Unify handling of NAMESPACE_ERR and fix Acid3 test 25
        http://bugs.webkit.org/show_bug.cgi?id=16693

        Test: fast/dom/DOMImplementation/createDocumentType-err.html

        * dom/DOMImplementation.cpp:
        (WebCore::DOMImplementation::createDocumentType):
        (WebCore::DOMImplementation::createDocument):
        * dom/DOMImplementation.idl:
        * dom/Document.cpp:
        (WebCore::Document::hasPrefixNamespaceMismatch):
        (WebCore::Document::createElementNS):
        (WebCore::Document::parseQualifiedName):
        (WebCore::Document::createAttributeNS):
        * dom/Document.h:
        * dom/Element.cpp:
        (WebCore::Element::setAttributeNS):
        * editing/FormatBlockCommand.cpp:
        (WebCore::FormatBlockCommand::doApply):


Canonical link: https://commits.webkit.org/24910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31231 268f45cc-cd09-0410-ab3c-d52691b4dbfc