WebCore/dom/Element.cpp
@@ -1054,11 +1054,11 @@ PassRefPtr<Attr> Element::removeAttributeNode(Attr *attr, ExceptionCode& ec)
 void Element::setAttributeNS(const String& namespaceURI, const String& qualifiedName, const String& value, ExceptionCode& ec)
 {
     String prefix, localName;
-    if (!Document::parseQualifiedName(qualifiedName, prefix, localName)) {
-        ec = INVALID_CHARACTER_ERR;
+    if (!Document::parseQualifiedName(qualifiedName, prefix, localName, ec))
         return;
-    }
-    setAttribute(QualifiedName(prefix, localName, namespaceURI), value.impl(), ec);
+
+    QualifiedName qName(prefix, localName, namespaceURI);
+    setAttribute(qName, value.impl(), ec);
 }
 
 void Element::removeAttribute(const String& name, ExceptionCode& ec)
